--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -18,7 +18,7 @@
         fill="none"
         viewBox="0 0 24 24"
         stroke-width="1.5"
-        stroke="currentColor"
+        stroke="#ffffff"
         class="size-6"
       >
         <path
@@ -58,7 +58,7 @@
       {% endif %}
     </div>
 
-    <div id="content", style="margin-bottom: 1%; color: #ffffff">
+    <div id="content", style="margin-bottom: 1%">
       {% block body %} {% endblock %}
     </div>
   </body>
